syntax = "proto3";

package NFMsg; 

import "NFMsgBase.proto";


message FriendData
{
    Ident		id 				= 1;
	bytes		name 			= 2;
}

message ReqAckFriendList
{
	repeated FriendData 	inviteList 	= 1;
	repeated FriendData 	friendList 	= 2;
}

message ReqAckDeleteFriend
{
    Ident	id 				= 1;
}

message ReqAckSendInvite
{
    Ident	id 				= 1;
	bytes 	name					= 2;
}

message ReqAckAcceptInvite
{
    Ident	id 				= 1;
}

message ReqAckRejectInvite
{
    Ident	id 				= 1;
}

message ReqAckIgnoreInvite
{
    Ident	id 				= 1;
}

message ReqAckBlockPlayer
{
    Ident	id 				= 1;
}

message ReqAckUnBlockPlayer
{
    Ident	id 				= 1;
}